Switch to ppc64el builder as s390x doesn't work well for now
Signed-off-by: 林博仁(Buo-ren, Lin) <Buo.Ren.Lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -10,7 +10,7 @@ description: |
 
 # build on least busy architecture
 architectures:
-- build-on: s390x
+- build-on: ppc64el
   run-on: all
 base: core
 grade: stable
